# agentfoundry-identity

./: .env.example  .gitignore  =5.0.0  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
af_identity_service/: __init__.py  app.py  config.py  dependencies.py  logging.py  version.py
af_identity_service/github/: __init__.py  driver.py
af_identity_service/migrations/: __init__.py  __main__.py  github_token_schema.py  user_schema.py
af_identity_service/models/: __init__.py  github.py  session.py  token.py  user.py
af_identity_service/routes/: __init__.py  admin.py  auth_github.py  github_token.py  me.py  session.py  token.py
af_identity_service/security/: __init__.py  auth.py  crypto.py  jwt.py
af_identity_service/services/: __init__.py  github_tokens.py  oauth.py
af_identity_service/stores/: __init__.py  github_token_store.py  postgres_github_token_store.py  postgres_user_repository.py  redis_session_store.py  session_store.py  user_store.py
docs/identity/: architecture.md  deployment.md  oauth.md  overview.md  release.md  security.md  usage.md
repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
src/af_identity_service/: __init__.py  app.py  config.py  logging.py
tests/: __init__.py  test_app.py  test_auth_github_routes.py  test_config.py  test_crypto.py  test_dependencies.py  test_github_driver.py  test_github_token_route.py  test_logging.py  test_models.py  test_postgres_github_token_store.py  test_postgres_user_repository.py  test_redis_session_store.py  test_stores.py  test_token_and_session_routes.py
