[tool.poetry]
name = "af-identity-service"
version = "0.1.0"
description = "Agent Foundry Identity Service - FastAPI-based authentication and authorization"
authors = ["Agent Foundry <agentfoundry@example.com>"]
readme = "README.md"
license = "GPL-3.0-only"
packages = [{include = "af_identity_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/af_identity_service"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
