[project]
name = "af-identity-service"
dynamic = ["version"]
description = "Agent Foundry Identity Service - FastAPI-based authentication and authorization"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "Agent Foundry", email = "agentfoundry@example.com" },
    { name = "John Brosnihan" }
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "structlog>=24.4.0,<25.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "cryptography>=41.0.0,<47.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[project.scripts]
af-identity = "af_identity_service.app:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["af_identity_service*"]

[tool.setuptools.dynamic]
version = {attr = "af_identity_service.version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
